fix: url overflow container

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -231,6 +231,11 @@ body .ddoc {
     }
   }
 
+  .namespaceItemContent {
+    flex: 1;
+    width: 0;
+  }
+
   .markdown_summary {
     a:not(.no_color) {
       @apply link;
@@ -238,6 +243,10 @@ body .ddoc {
 
     :not(pre) > code {
       @apply bg-jsr-cyan-100/50 !important;
+    }
+
+    p {
+      max-width: 100%;
     }
   }
 
